--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,20 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="author" content="moguri846" />
+    <meta name="keywords" content="안심이, 안전지도" />
+    <meta name="description" content="안심이지킴이집" />
+    <meta property="og:site_name" content="안심이지킴이집" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="ko_KR" />
+    <meta property="twitter:card" content="summary" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=548667959cc1d8bbc66318581018b4c8&libraries=services"
     ></script>
-    <title>React App</title>
+    <title>안심이지킴이집</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
